--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Galileo Design - QR Code Generator</title>
+    <title>QR Code Generator</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
     <link
@@ -15,7 +15,6 @@
     <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 
-    <!-- Подключаем библиотеку QRCode.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   </head>
   <body>
@@ -58,7 +57,6 @@
               Create a QR code
             </h1>
 
-            <!-- Поле ввода ссылки -->
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
                 <input
@@ -70,7 +68,6 @@
               </label>
             </div>
 
-            <!-- Кнопка для генерации QR-кода -->
             <div class="flex px-4 py-3">
               <button
                 id="generate-btn"
@@ -87,15 +84,13 @@
               Your QR code
             </h3>
 
-            <!-- Контейнер для QR-кода -->
             <div
               id="qr-code-container"
               class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-3 p-4"
             >
-              <!-- QR-код будет отображен здесь -->
+
             </div>
 
-            <!-- Ссылка на скачивание -->
             <a
               id="download-link"
               class="text-[#4e7397] text-sm font-normal leading-normal pb-3 pt-1 px-4 underline cursor-pointer hidden"
@@ -108,32 +103,27 @@
     </div>
 
     <script>
-      // Инициализируем обработку генерации QR-кода
+
       document.getElementById("generate-btn").addEventListener("click", function () {
         const url = document.getElementById("url-input").value;
         
-        // Проверяем, чтобы URL не был пустым
         if (!url) {
           alert("Please enter a URL.");
           return;
         }
 
-        // Очищаем контейнер с QR-кодом перед генерацией нового
         const qrContainer = document.getElementById("qr-code-container");
         qrContainer.innerHTML = "";
 
-        // Генерируем QR-код с помощью библиотеки QRCode.js
         const qrCode = new QRCode(qrContainer, {
           text: url,
           width: 158,
           height: 158,
         });
 
-        // Делаем видимой ссылку для загрузки
         const downloadLink = document.getElementById("download-link");
         downloadLink.classList.remove("hidden");
         
-        // Настраиваем ссылку для скачивания QR-кода
         setTimeout(() => {
           const qrCanvas = qrContainer.querySelector("canvas");
           if (qrCanvas) {
@@ -141,7 +131,7 @@
             downloadLink.href = qrImageURL;
             downloadLink.download = "qr_code.png";
           }
-        }, 300); // Небольшая задержка для завершения рендеринга QR-кода
+        }, 300);
       });
     </script>
   </body>
